--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,10 @@
   --subtitle-color: #757575;
 }
 
+:root {
+  --headbg-color: #ffffff;
+}
+
 .list {
   list-style: none;
 }
@@ -20,6 +24,7 @@
 /* ======================== COMPONENTS ======================= */
 .body {
   font-family: 'Roboto', sans-serif;
+  color: var(--another-color);
 }
 
 .contact-link {
@@ -46,19 +51,18 @@
   font-weight: 400;
   font-size: 14px;
   line-height: 1.71;
-  /* or 171% */
-
   letter-spacing: 0.03em;
-
   color: var(--subtitle-color);
 }
 /* ======================== HEADER ======================== */
+.main-header {
+  background: #ffffff;
+}
+
 .logo-link {
-  font-family: 'Raleway';
   font-weight: 700;
   font-size: 26px;
   line-height: 1.19;
-  /* identical to box height */
   letter-spacing: 0.03em;
   color: #000000;
 }
@@ -96,17 +100,44 @@
   letter-spacing: 0.06em;
   text-transform: uppercase;
 
-  /* color: #ffffff; */
+  color: #ffffff;
 }
 
 .service-button:hover,
 .service-button:focus {
   background-color: var(--accent-color);
   color: #ffffff;
-  cursor: pointers;
+}
+
+.service-button {
+  cursor: pointer;
+}
+
+.service-button {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.62;
+  letter-spacing: 0.03em;
+}
+.service-button {
+  border: none;
 }
 
 /* ======================== Attention to detail ======================== */
+.section-detail {
+  background: #eeeeee;
+}
+
+.title-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  overflow: hidden;
+  border: 0;
+  clip: rect(0 0 0 0);
+}
 
 .subtitle-detail {
   font-weight: 700;
@@ -117,7 +148,6 @@
 }
 
 .text-detail {
-  font-weight: 400;
   font-size: 14px;
   line-height: 1.71;
   /* or 171% */
@@ -128,32 +158,54 @@
 }
 
 /* ======================== What are we doing ======================== */
-
+.section-doing {
+  background: #e5e5e5;
+}
 /* ======================== our team ======================== */
+.section-team {
+  background: #f5f4fa;
+}
 
+.team-item {
+  background: #ffffff;
+}
 .subtitle-team {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.19;
-  /* identical to box height */
-
-  text-align: center;
   letter-spacing: 0.03em;
 }
 
 .text-team {
-  font-weight: 400;
   font-size: 16px;
   line-height: 1.19;
-  /* identical to box height */
-
-  text-align: center;
   letter-spacing: 0.03em;
-
   color: var(--subtitle-color);
 }
 
 /* ======================== footer ======================== */
 .footer {
   background-color: #2f303a;
+}
+.logo-footer {
+  font-family: 'Raleway';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 31px;
+  letter-spacing: 0.03em;
+  color: #ffffff;
+}
+.text-footer {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  color: #ffffff;
+}
+
+/* ======================== portfolio ========================  */
+.section-button,
+.item-portfolio {
+  background-color: #ffffff;
 }
