--- a/css/styles.css
+++ b/css/styles.css
@@ -42,13 +42,7 @@ body {
   text-align: center;
   letter-spacing: 0.03em;
 }
-.text-detail {
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 1.71;
-  letter-spacing: 0.03em;
-  color: var(--subtitle-color);
-}
+
 /* ======================== HEADER ======================== */
 .main-header {
   background-color: var(--headbg-color);
@@ -159,8 +153,6 @@ body {
 }
 
 .text-team {
-  font-weight: 400;
-  font-size: 16px;
   line-height: 1.19;
   letter-spacing: 0.03em;
   text-align: center;
@@ -184,7 +176,6 @@ body {
 
 .text-footer {
   font-style: normal;
-  font-weight: 400;
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
@@ -193,7 +184,6 @@ body {
 
 .contact-footer {
   font-style: normal;
-  font-weight: 400;
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
@@ -226,4 +216,17 @@ body {
   letter-spacing: 0.03em;
   border: none;
   cursor: pointer;
+}
+
+.subtitle-portfolio {
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
+}
+
+.text-portfolio {
+  line-height: 1.87;
+  letter-spacing: 0.03em;
+  color: var(--subtitle-color);
 }
